--- a/my_conf.conf
+++ b/my_conf.conf
@@ -55,9 +55,9 @@ BoxJs = type=http-request,script-path=https://gitee.com/chavyleung/scripts/raw/m
 
 #京东到家
 #获取京东到家Cookie = type=http-request,pattern=^https:\/\/daojia.jd.com/client(.*?)functionId=signin(.*?)userSigninNew, script-path=https://gitee.com/chavyleung/scripts/raw/master/jddj/jddj.cookie.js, enable=true
-获取京东到家Cookie = type=http-request,pattern=^https:\/\/daojia.jd.com/client(.*?)functionId=signin(.*?)userSigninNew,script-path=https://gitee.com/chavyleung/scripts/raw/master/jddj/jddj.cookie.js, enable=true,max-size=1048576,timeout=200,requires-body=true
+#获取京东到家Cookie = type=http-request,pattern=^https:\/\/daojia.jd.com/client(.*?)functionId=signin(.*?)userSigninNew,script-path=https://gitee.com/chavyleung/scripts/raw/master/jddj/jddj.cookie.js, enable=true,max-size=1048576,timeout=200,requires-body=true
 
-京东到家签到 = type=cron,cronexpr="1 */2 * * *",timeout=200,script-path=https://gitee.com/chavyleung/scripts/raw/master/jddj/jddj.js, enable=true
+#京东到家签到 = type=cron,cronexpr="1 */2 * * *",timeout=200,script-path=https://gitee.com/chavyleung/scripts/raw/master/jddj/jddj.js, enable=true
 
 
 
