--- a/my_conf.conf
+++ b/my_conf.conf
@@ -74,13 +74,19 @@ BoxJs = type=http-request,script-path=https://gitee.com/chavyleung/scripts/raw/m
 京东天天加速 = type=cron,cronexpr="13 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_speed.js, enable=true
 京东摇钱树 = type=cron,cronexpr="15 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_moneyTree.js, enable=true
 取关京东店铺商品 = type=cron,cronexpr="17 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_unsubscribe.js, enable=true
-进店领豆 = type=cron,cronexpr="19 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_shop.js, enable=true
+进店领豆 = type=cron,cronexpr="0-6/3 0 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_shop.js, enable=true
 京小超 = type=cron,cronexpr="21 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_superMarket.js, enable=true
 京小超领蓝币 = type=cron,cronexpr="23 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_blueCoin.js, enable=true
 京东全民开红包 = type=cron,cronexpr="25 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_redPacket.js, enable=true
 京东摇京豆 = type=cron,cronexpr="27 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_club_lottery.js, enable=true
 京东抽奖机 = type=cron,cronexpr="29 */2 * * *",timeout=500,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, enable=true
 京东排行榜 = type=cron,cronexpr="31 */2 * * *",timeout=200,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, enable=true
+
+京东赚赚 = type=cron,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_jdzz.js, cronexpr="1-10/5 0 * * *", timeout=3600, enable=true
+
+京豆变动通知 = type=cron,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_bean_change.js, cronexpr="2 9 * * *", timeout=3600, enable=true
+
+点点券 = type=cron,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jd_necklace.js, cronexpr="10 0,20 * * *", timeout=3600, enable=true
 
 
 
