--- a/my_conf.conf
+++ b/my_conf.conf
@@ -152,6 +152,11 @@ crazyJoy任务 = type=cron,cronexp="10 7 * * *",enable=true,timeout=3600,script-
 
 
 
+京东到家鲜豆任务 = type=cron,cronexp="1 0 * * *",enable=true,timeout=3600,script-path=https://raw.githubusercontent.com/jdk6979/JDDJ/main/jddj_bean.js
+
+京东到家获取Cookie脚本 = type=http-request,pattern=^https:\/\/daojia\.jd\.com\/html\/index\.html,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/jdk6979/JDDJ/main/jddj_getck.js,script-update-interval=0
+
+
 
 
 
