--- a/my_conf.conf
+++ b/my_conf.conf
@@ -151,10 +151,10 @@ crazyJoy任务 = type=cron,cronexp="10 7 * * *",enable=true,timeout=3600,script-
 京喜签到 = type=cron,cronexp="5 0 * * *",enable=true,timeout=3600,script-path=https://raw.githubusercontent.com/jdk6979/jd_scripts-1/master/jx_sign.js
 
 
+# cookies
+#京东到家鲜豆任务 = type=cron,cronexp="1 0 * * *",enable=true,timeout=3600,script-path=https://raw.githubusercontent.com/jdk6979/JDDJ/main/jddj_bean.js
 
-京东到家鲜豆任务 = type=cron,cronexp="1 0 * * *",enable=true,timeout=3600,script-path=https://raw.githubusercontent.com/jdk6979/JDDJ/main/jddj_bean.js
-
-京东到家获取Cookie脚本 = type=http-request,pattern=^https:\/\/daojia\.jd\.com\/html\/index\.html,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/jdk6979/JDDJ/main/jddj_getck.js,script-update-interval=0
+#京东到家获取Cookie脚本 = type=http-request,pattern=^https:\/\/daojia\.jd\.com\/html\/index\.html,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/jdk6979/JDDJ/main/jddj_getck.js,script-update-interval=0
 
 
 
