--- a/conf_dy.conf
+++ b/conf_dy.conf
@@ -31,7 +31,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDom
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, DIRECT
 #规则之外
 GEOIP,CN,DIRECT
-FINAL,DIRECT
+FINAL,PROXY
 
 
 #[URL Rewrite]
